chore: configura versão do Node.js para 18.x

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,10 @@
     },
     {
       "src": "package.json",
-      "use": "@vercel/next"
+      "use": "@vercel/next",
+      "config": {
+        "nodeVersion": "18.x"
+      }
     }
   ],
   "rewrites": [
