chore: ajusta configurações do Node.js para Vercel

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm": ">=9.0.0"
+  },
+  "vercel": {
+    "nodeVersion": "18.x"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
