--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       "src": "package.json",
       "use": "@vercel/next",
       "config": {
-        "nodeVersion": "18.x"
+        "nodeVersion": "18.19.1"
       }
     }
   ],
@@ -18,5 +18,8 @@
       "source": "/api/(.*)",
       "destination": "/node_api/index.js"
     }
-  ]
+  ],
+  "env": {
+    "NODE_VERSION": "18.19.1"
+  }
 } 
