--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint"
   },
   "engines": {
-    "node": "18.x",
-    "npm": ">=9.0.0"
+    "node": "22.x"
   },
   "vercel": {
     "nodeVersion": "18.x"
