--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,14 @@
     "@typescript-eslint/no-empty-object-type": "off",
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/no-non-null-assertion": "warn"
+    "@typescript-eslint/no-non-null-assertion": "warn",
+    "@typescript-eslint/ban-types": ["error", {
+      "types": {
+        "{}": {
+          "message": "Use 'Record<string, never>' instead",
+          "fixWith": "Record<string, never>"
+        }
+      }
+    }]
   }
 } 
